Fixed the main nav bar to display on top for desktops. Made the nav bar always visible even when scrolling. Fixed the logo.

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,10 @@ body {
 
 .cstm-ctas {
     z-index: 10;
+    min-width: 100vw;
+    bottom: 0;
+    padding: 1rem 1rem 1.5rem 1rem;
+    background-color: black;
 }
 
 .cstm-link {
@@ -47,3 +51,23 @@ body {
 .cstm-link:hover {
     color: var(--primary-hover);
 }
+
+.on-top {
+    z-index: 9;
+}
+
+.logo {
+    max-width: 30rem;
+}
+
+.tag {
+    padding: 0 1rem;
+}
+
+@media (min-width: 48rem) {
+    .cstm-ctas {
+        bottom: auto;
+        padding: 1rem;
+    }
+}
+  
